Fixed img bug on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -279,18 +279,10 @@ body {
 }
 
 #about-img {
-    width: 50%;
-    margin: 0;
-    height: 600px;
-}
-
-#about-img img {
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    max-height: 100%;
+    width: 400px;
+    height: 400px;
+    margin:auto;
     border-radius: 50%;
-    transform: scale(0.9);
 }
 
 #about-text {
@@ -434,12 +426,6 @@ p {
         font-size: 15px;
     }
 
-    #about-img {
-        box-sizing: border-box;
-        width: 50%;
-        height: auto;
-    }
-
     #about-text {
         box-sizing: border-box;
         width: 50%;
@@ -489,15 +475,15 @@ p {
 
     #about {
         display: flex;
+        text-align: center;
     }
 
     #about-img {
-        box-sizing: border-box;
-        width: 50%;
-        height: auto;
-        margin: 0;
+        width: 300px;
+        height: 300px;
     }
     #about-text {
+        text-align: left;
         box-sizing: border-box;
         width: 50%;
     }
@@ -542,18 +528,7 @@ p {
         border: dotted 2px rgba(255, 255, 255, 0.148);
     }
 
-    #about-img {
-        width: 100%;
-        height: 350px;
-        min-width: fit-content;
-        text-align: center;
-    }
-    #about-img img {
-        transform: scale(1);
-        width: auto;
-        height: auto;
-        min-width: fit-content;
-    }
+
 
     #about-text {
         width: 100%;
@@ -595,9 +570,6 @@ p {
         border: none;
     }
 
-    #about-img {
-        height: 300px;
-    }
     #about-text {
         padding: 5px;
     }
